# firebase-rs

./: Cargo.toml  README.md
firebase/: .build.rs.icloud  Cargo.toml
firebase-sys/: .gitignore  Cargo.toml  README.md  build.rs
firebase-sys/firebase_cpp_sdk/include/firebase/: version.h
firebase-sys/firebase_cpp_sdk/include/firebase/analytics/: event_names.h  parameter_names.h  user_property_names.h
firebase-sys/firebase_cpp_sdk/libs/android/: firebase_messaging_cpp.aar  firestore.pro
firebase-sys/src/: crasher.cpp  crasher.h  wrapper.cpp  wrapper.h
firebase/src/: analytics.rs  app.rs  future.rs  lib.rs  remote_config.rs  util.rs  variant.rs
firebase/src/ffi/: id_mod.rs  mod.rs  string.rs
