[package]
name = "firebase"
version = "0.1.0"
edition = "2018"

[dependencies]
firebase-sys = { path = "../firebase-sys"}
thiserror = "1.0.29"
log = "0.4.14"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.3.0"
ndk-glue = "0.3.0"
jni = "0.19.0"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"

[features]
analytics = ["firebase-sys/analytics"]
remote_config = ["firebase-sys/remote_config"]